--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "leetcode",
   "version": "1.0.0",
   "main": "js.js",
+  "type": "module",
   "scripts": {
     "js": "nodemon js.js",
     "ts": "nodemon ts.ts"
